--- a/style.css
+++ b/style.css
@@ -1,29 +1,57 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
-body{
-    background-color:#928c8cd9;
+
+body {
+    background-color: #928c8cd9;
     display: flex;
+
 }
-main{
+
+main {
     display: flex;
     align-items: center;
-    height: 100%;
+
 }
-.L1{
-    align-items: end;
-    justify-content: end;
-    display: flex;
+
+.linhas {
+    height: 1080px;
     width: 1920px;
-    height:216px ;
-    background-color: rgb(230 228 245);
 }
-.avatar{
+
+.linha {
+    display: flex;
+    width: 100%;
+    height: 216px;
+}
+
+.avatar {
     display: flex;
     height: 116px;
     width: 116px;
-    background-color: rgb(167 161 213);
     border-radius: 1000px;
+}
+
+.L1 {
+    gap: 10px;
+    align-items: end;
+    justify-content: end;
+    background-color: rgb(230 228 245);
+}
+
+.L2 {
+    gap: 10px;
+    align-items: center;
+    justify-content: end;
+    background-color: #d9f5c7;
+}
+
+.B1 {
+    background-color: rgb(167 161 213);
+}
+
+.B2 {
+    background-color: #7aab5b;
 }
