--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ main {
     display: flex;
     width: 100%;
     height: 216px;
+    padding: 1px;
 }
 
 .formas {
@@ -47,11 +48,20 @@ main {
     justify-content: end;
     background-color: #d9f5c7;
 }
+
 .Linha3 {
     gap: 10px;
     align-items: center;
     justify-content: center;
     background-color: #f8e3e4;
+}
+
+.Linha4 {
+    gap: 25.5%;
+    align-items: center;
+    justify-content: center;
+    background-color: #f4f5d5;
+
 }
 
 .Bolas1 {
@@ -64,4 +74,8 @@ main {
 
 .Bolas3 {
     background-color: #c87579;
+}
+
+.Bolas4 {
+    background-color: #d3d826;
 }
