--- a/style.css
+++ b/style.css
@@ -33,24 +33,25 @@ main {
     height: 116px;
     width: 116px;
     border-radius: 1000px;
+     box-shadow: inset -20px 18px 8px 4px #000000b0;
 }
 
 .Linha1 {
-    gap: 10px;
+    gap: 1%;
     align-items: end;
     justify-content: end;
     background-color: #e6e4f5;
 }
 
 .Linha2 {
-    gap: 10px;
+    gap: 1%;
     align-items: center;
     justify-content: end;
     background-color: #d9f5c7;
 }
 
 .Linha3 {
-    gap: 10px;
+    gap: 1%;
     align-items: center;
     justify-content: center;
     background-color: #f8e3e4;
@@ -61,6 +62,13 @@ main {
     align-items: center;
     justify-content: center;
     background-color: #f4f5d5;
+
+}
+.Linha5 {
+    gap: 10%;
+    align-items: center;
+    justify-content: center;
+    background-color: #d5e7ff;
 
 }
 
@@ -78,4 +86,7 @@ main {
 
 .Bolas4 {
     background-color: #d3d826;
+}
+.Bolas5 {
+    background-color: #527fba;
 }
